oops! forgot to update the search bar

--- a/index.html
+++ b/index.html
@@ -57,10 +57,12 @@
 						<h5><a class="nav-link mobile" href="/#/small-pets">Small Pets</a></h5>
 						<h5><a class="nav-link mobile" href="/#/faqs">FAQs</a></h5>
 					  </ul>
-					  <form class="d-flex mt-3" role="search">
-						<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-						<button class="btn btn-outline-success" type="submit">Search</button>
-					  </form>
+					  <form id="search-bar" class="d-flex mt-4 collapse navbar-collapse">
+						<button class="btn btn-primary" type="submit">
+							<i data-feather="search"></i>
+						</button>
+						<input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
+					</form>
 					</div>
 			</nav>
 		</div>
