--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body className="m-0">
 	<div id="app" class="container-fluid p-0">
-		<div id="navbar-container">
+		<div class="navbar-container">
 			<nav class="navbar navbar-expand-lg">
 				<nav class="navbar-brand">
 					<img src="./assets/img/logo.png" id="navbar-logo" alt="Logo for Paradigm Pet Professionals" />
@@ -67,6 +67,28 @@
 			</nav>
 		</div>
 		<div id="content">
+			<div class="container-fluid">
+				<div id="primary-card" class="card mt-4">
+					<div class="card-body">
+						testing
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="navbar-container footer">
+			<nav class="navbar">
+				<div class="container-fluid justify-content-center">
+					<div class="row text-center">
+						<div class="col-12">
+							Copyright 2023©
+						</div>
+						<div class="col-12">
+							Paradigm Pet Professionals
+						</div>
+					</div>
+				</div>
+		</div>
+		</nav>
 		</div>
 	</div>
 	</div>
