changing to templates

--- a/index.html
+++ b/index.html
@@ -67,14 +67,58 @@
 			</nav>
 		</div>
 		<div id="content">
+
+		</div>
+		<template id="home-template">
 			<div class="container-fluid">
 				<div id="primary-card" class="card mt-4">
 					<div class="card-body">
-						testing
+						<h2>Home Page Test</h2>
+						<p>content</p>
 					</div>
 				</div>
 			</div>
-		</div>
+		</template>
+		<template id="cats-template">
+			<div class="container-fluid">
+				<div id="primary-card" class="card mt-4">
+					<div class="card-body">
+						<h2>Cats Page Test</h2>
+						<p>content</p>
+					</div>
+				</div>
+			</div>
+		</template>
+		<template id="dogs-template">
+			<div class="container-fluid">
+				<div id="primary-card" class="card mt-4">
+					<div class="card-body">
+						<h2>Dogs Page Test</h2>
+						<p>content</p>
+					</div>
+				</div>
+			</div>
+		</template>
+		<template id="small-pets-template">
+			<div class="container-fluid">
+				<div id="primary-card" class="card mt-4">
+					<div class="card-body">
+						<h2>Small Pets Page Test</h2>
+						<p>content</p>
+					</div>
+				</div>
+			</div>
+		</template>
+		<template id="faqs-template">
+			<div class="container-fluid">
+				<div id="primary-card" class="card mt-4">
+					<div class="card-body">
+						<h2>FAQs Page Test</h2>
+						<p>content</p>
+					</div>
+				</div>
+			</div>
+		</template>
 		<div class="navbar-container footer">
 			<nav class="navbar">
 				<div class="container-fluid justify-content-center">
