--- a/index.html
+++ b/index.html
@@ -70,12 +70,40 @@
 
 		</div>
 		<template id="home-template">
-			<div class="container-fluid">
+			<div class="container primary-container">
 				<div id="primary-card" class="card mt-4">
 					<div class="card-body">
-						<h2>Home Page Test</h2>
-						<p>content</p>
-					</div>
+						<h2>Home Page</h2>
+						<p>Pets are nature's gift to humanity. It has been scientifically proven that opening our homes and hearts to a pet
+							increases our longevity and improves our overall quality of life as well as the lives of our pets. At Pet Paradigm
+							Professionals, our mission is to offer resources to help you care for your furry, scaly, feathery, and slimy loved
+							ones. Our pet experts—or “Pexperts”—have been working with pet owners and professionals alike for the past twelve
+							years. They offer one-on-one consultations with current and prospective pet owners as well as group presentations
+							designed for veterinary, pet shelter, and pet breeding professionals.
+							<br />
+							Looking for basic pet care advice for the most common type of pets? Need additional help determining which type of
+							pet is right for you and your family? We will work with you and provide tailored evidence-based pet care to ensure
+							lifelong health and wellness of your new companion.
+							<br />
+							Looking for your new best friend? The following organizations can help you find and adopt the perfect companion:
+							<br />
+							General Adoption Resources: <a href="https://theshelterpetproject.org/">https://theshelterpetproject.org/</a>
+							<br />
+							ASPCA: <a href="https://www.aspca.org/">https://www.aspca.org/</a>
+							<br />
+							Fish Rescue: <a href="https://www.sterlingshelter.org/humane-society/koi-fish-rescue/">https://www.sterlingshelter.org/humane-society/koi-fish-rescue/</a>
+							<br />
+							Snake Rescue: <a href="https://savethesnakes.org/snakerescuecall/">https://savethesnakes.org/snakerescuecall/</a>
+							<br />
+							Bird Rescue: <a href="https://ftlob.rescuegroups.org/">https://ftlob.rescuegroups.org/</a>
+							<br />
+							We are also happy to help you navigate the adoption process! We will guide you through each step in the process from
+							determining which type of pet is best suited for your family and home environment, to completing the necessary
+							paperwork, to bringing your new loved one home. Please fill out our contact form to request a consultation. We will
+							contact you within 48 hours to schedule a consultation. All fields are required.
+							<br />
+						</p>
+						</div>
 				</div>
 			</div>
 		</template>
