finalizing home page

--- a/index.html
+++ b/index.html
@@ -102,6 +102,33 @@
 							paperwork, to bringing your new loved one home. Please fill out our contact form to request a consultation. We will
 							contact you within 48 hours to schedule a consultation. All fields are required.
 							<br />
+							<form id="contact-form">
+								<div class="row mb-2">
+									<div class="col">
+										<label for="first-name" class="form-label">First Name</label>
+										<input type="text" placeholder="John" id="first-name" class="form-control" />
+									</div>
+									<div class="col">
+										<label for="last-name" class="form-label">Last Name</label>
+										<input type="text" placeholder="Smith" id="last-name" class="form-control" />
+									</div>
+								</div>
+								<div class="row mb-4">
+									<div class="col">
+										<label for="phone-number" class="form-label">Phone Number</label>
+										<input type="tel" placeholder="333-444-5555" id="phone-number" class="form-control" />
+									</div>
+									<div class="col">
+										<label for="email" class="form-label">Email</label>
+										<input type="email" placeholder="person@email.com" id="email" class="form-control" />
+									</div>
+								</div>
+								<div class="row justify-content-end">
+									<div class="col-3 text-end">
+										<button class="btn btn-primary">Submit</button>
+									</div>
+								</div>
+							</form>
 						</p>
 						</div>
 				</div>
