--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 		<div class="navbar-container">
 			<nav class="navbar navbar-expand-lg">
 				<nav class="navbar-brand">
-					<img src="./assets/img/logo.png" id="navbar-logo" alt="Logo for Paradigm Pet Professionals" />
+					<a href="/#/">
+						<img src="./assets/img/logo.png" id="navbar-logo" alt="Logo for Paradigm Pet Professionals" />
+					</a>
 				</nav>
 				<div class="collapse navbar-collapse mt-auto">
 					<div class="navbar-nav">
@@ -73,62 +75,114 @@
 			<div class="container primary-container">
 				<div id="primary-card" class="card mt-4">
 					<div class="card-body">
-						<h2>Home Page</h2>
-						<p>Pets are nature's gift to humanity. It has been scientifically proven that opening our homes and hearts to a pet
-							increases our longevity and improves our overall quality of life as well as the lives of our pets. At Pet Paradigm
-							Professionals, our mission is to offer resources to help you care for your furry, scaly, feathery, and slimy loved
-							ones. Our pet experts—or “Pexperts”—have been working with pet owners and professionals alike for the past twelve
-							years. They offer one-on-one consultations with current and prospective pet owners as well as group presentations
-							designed for veterinary, pet shelter, and pet breeding professionals.
-							<br />
-							Looking for basic pet care advice for the most common type of pets? Need additional help determining which type of
-							pet is right for you and your family? We will work with you and provide tailored evidence-based pet care to ensure
-							lifelong health and wellness of your new companion.
-							<br />
-							Looking for your new best friend? The following organizations can help you find and adopt the perfect companion:
-							<br />
-							General Adoption Resources: <a href="https://theshelterpetproject.org/">https://theshelterpetproject.org/</a>
-							<br />
-							ASPCA: <a href="https://www.aspca.org/">https://www.aspca.org/</a>
-							<br />
-							Fish Rescue: <a href="https://www.sterlingshelter.org/humane-society/koi-fish-rescue/">https://www.sterlingshelter.org/humane-society/koi-fish-rescue/</a>
-							<br />
-							Snake Rescue: <a href="https://savethesnakes.org/snakerescuecall/">https://savethesnakes.org/snakerescuecall/</a>
-							<br />
-							Bird Rescue: <a href="https://ftlob.rescuegroups.org/">https://ftlob.rescuegroups.org/</a>
-							<br />
-							We are also happy to help you navigate the adoption process! We will guide you through each step in the process from
-							determining which type of pet is best suited for your family and home environment, to completing the necessary
-							paperwork, to bringing your new loved one home. Please fill out our contact form to request a consultation. We will
-							contact you within 48 hours to schedule a consultation. All fields are required.
-							<br />
-							<form id="contact-form">
-								<div class="row mb-2">
-									<div class="col">
-										<label for="first-name" class="form-label">First Name</label>
-										<input type="text" placeholder="John" id="first-name" class="form-control" />
+						<h2>Home</h2>
+						<p>
+							<div class="row mb-2">
+								<div class="col-8">
+									<h5>Introduction</h5>
+									Pets are nature's gift to humanity. It has been scientifically proven that opening our homes and hearts to a pet
+									increases our longevity and improves our overall quality of life as well as the lives of our pets. At Pet
+									Paradigm
+									Professionals, our mission is to offer resources to help you care for your furry, scaly, feathery, and slimy
+									loved
+									ones. Our pet experts—or “Pexperts”—have been working with pet owners and professionals alike for the past
+									twelve
+									years. They offer one-on-one consultations with current and prospective pet owners as well as group
+									presentations
+									designed for veterinary, pet shelter, and pet breeding professionals.
+								</div>
+								<div class="col">
+									<div class="row">
+										<div class="col-12">
+											<img class="img-fluid" src="assets/img/home_page_andrew_s.jpg" alt="A picture of a cat and dog laying next to each other">
+										</div>
 									</div>
-									<div class="col">
-										<label for="last-name" class="form-label">Last Name</label>
-										<input type="text" placeholder="Smith" id="last-name" class="form-control" />
+									<div class="row">
+										<div class="col-12 text-muted">
+											Photo by <a
+												href="https://unsplash.com/@sita2?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Andrew
+												S</a> on <a
+												href="https://unsplash.com/photos/ouo1hbizWwo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+										</div>
 									</div>
 								</div>
-								<div class="row mb-4">
-									<div class="col">
-										<label for="phone-number" class="form-label">Phone Number</label>
-										<input type="tel" placeholder="333-444-5555" id="phone-number" class="form-control" />
-									</div>
-									<div class="col">
-										<label for="email" class="form-label">Email</label>
-										<input type="email" placeholder="person@email.com" id="email" class="form-control" />
-									</div>
+							</div>
+							<div class="row mb-2">
+								<div class="col">
+									<h5>Adoption Resources</h5>
+									Looking for basic pet care advice for the most common type of pets? Need additional help determining which type of
+									pet is right for you and your family? We will work with you and provide tailored evidence-based pet care to ensure
+									lifelong health and wellness of your new companion.
 								</div>
-								<div class="row justify-content-end">
-									<div class="col-3 text-end">
-										<button class="btn btn-primary">Submit</button>
-									</div>
+							</div>
+							<div class="row">
+								<div class="col">
+									Looking for your new best friend? The following organizations can help you find and adopt the perfect companion:
 								</div>
-							</form>
+							</div>
+							<div class="row">
+								<div class="col">
+									General Adoption Resources: <a href="https://theshelterpetproject.org/">https://theshelterpetproject.org/</a>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col">
+									ASPCA: <a href="https://www.aspca.org/">https://www.aspca.org/</a>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col">
+									Fish Rescue: <a href="https://www.sterlingshelter.org/humane-society/koi-fish-rescue/">https://www.sterlingshelter.org/humane-society/koi-fish-rescue/</a>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col">
+									Snake Rescue: <a href="https://savethesnakes.org/snakerescuecall/">https://savethesnakes.org/snakerescuecall/</a>
+								</div>
+							</div>
+							<div class="row mb-2">
+								<div class="col">
+									Bird Rescue: <a href="https://ftlob.rescuegroups.org/">https://ftlob.rescuegroups.org/</a>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col">
+									<h5>Contact</h5>
+									We are also happy to help you navigate the adoption process! We will guide you through each step in the process
+									from
+									determining which type of pet is best suited for your family and home environment, to completing the necessary
+									paperwork, to bringing your new loved one home. Please fill out our contact form to request a consultation. We
+									will
+									contact you within 48 hours to schedule a consultation. All fields are required.
+									<form id="contact-form">
+										<div class="row mb-2">
+											<div class="col">
+												<label for="first-name" class="form-label">First Name</label>
+												<input type="text" placeholder="John" id="first-name" class="form-control" />
+											</div>
+											<div class="col">
+												<label for="last-name" class="form-label">Last Name</label>
+												<input type="text" placeholder="Smith" id="last-name" class="form-control" />
+											</div>
+										</div>
+										<div class="row mb-4">
+											<div class="col">
+												<label for="phone-number" class="form-label">Phone Number</label>
+												<input type="tel" placeholder="333-444-5555" id="phone-number" class="form-control" />
+											</div>
+											<div class="col">
+												<label for="email" class="form-label">Email</label>
+												<input type="email" placeholder="person@email.com" id="email" class="form-control" />
+											</div>
+										</div>
+										<div class="row justify-content-end">
+											<div class="col-3 text-end">
+												<button class="btn btn-primary">Submit</button>
+											</div>
+										</div>
+									</form>
+								</div>
+							</div>
 						</p>
 						</div>
 				</div>
