fixing mobile responsiveness for home page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<h2>Home</h2>
 						<p>
 							<div class="row mb-2">
-								<div class="col-8">
+								<div class="col-12 col-md-8">
 									<h5>Introduction</h5>
 									Pets are nature's gift to humanity. It has been scientifically proven that opening our homes and hearts to a pet
 									increases our longevity and improves our overall quality of life as well as the lives of our pets. At Pet
@@ -91,9 +91,9 @@
 									presentations
 									designed for veterinary, pet shelter, and pet breeding professionals.
 								</div>
-								<div class="col">
+								<div class="col-12 col-md-4">
 									<div class="row">
-										<div class="col-12">
+										<div class="col-6 col-md-12">
 											<img class="img-fluid" src="assets/img/home_page_andrew_s.jpg" alt="A picture of a cat and dog laying next to each other">
 										</div>
 									</div>
