--- a/index.html
+++ b/index.html
@@ -189,11 +189,98 @@
 			</div>
 		</template>
 		<template id="cats-template">
-			<div class="container-fluid">
+			<div class="primary-container container-fluid">
 				<div id="primary-card" class="card mt-4">
 					<div class="card-body">
-						<h2>Cats Page Test</h2>
-						<p>content</p>
+						<h2>Cats</h2>
+						<p>
+							<div class="row mb-2">
+								<div class="col-8">
+									<h5>Introduction</h5>
+									Cats were first domesticated around 7500 BCE in the western Asia region and are currently the second most
+									popular domestic pet in the United States. While there are over 60 unique documented cat breeds, care and
+									diet can differ between breeds. However, some diets and practices are generally recommended for the
+									well-being of your fluffy family member regardless of breed.
+									</div>
+									<div class="col-4">
+										<div class="row">
+											<div class="col-12">
+												<img src="assets/img/cats_daria_shatova.jpg" alt="A picture of a cat laying upside down"
+													class="img-fluid" />
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-12 text-muted">
+												Photo by <a
+													href="https://unsplash.com/@dariasha911?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Daria
+													Shatova</a> on <a
+													href="https://unsplash.com/photos/46TvM-BVrRI?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+											</div>
+										</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col">
+									<div class="row mb-2">
+										<div class="col">
+											<h5>Cat Requirements Through Their Lives</h5>
+										</div>
+									</div>
+									<div class="row mb-2">
+										<div class="col">
+											<h6>Zero to Four Weeks</h6>
+											It is important the queen (a term commonly used for a female cat that is either pregnant or nursing)
+											directly nurse her young if possible. Monitor your kitten’s growth closely to make sure its growth rate
+											is
+											progressing steadily. If any kitten is not growing at a sufficient rate, a caretaker might need to feed
+											the
+											kitten directly either with a bottle or a feeding tube. Some reasons why kittens might not gain weight
+											appropriately include the following:
+											too many other siblings are competing for mom's milk
+											gastrointestinal disease
+											environmental conditions such as extreme heat or cold, or unsanitary conditions
+										</div>
+									</div>
+									<div class="row mb-2">
+										<div class="col">
+											<h6>Four Weeks to One Year</h6>
+											Kittens can start being introduced to soft wet kitten food typically around three to four weeks after
+											birth.
+											According to the <a href="https://www.aspca.org/pet-care/cat-care/cat-nutrition-tips">ASPCA</a>, kittens at this age should eat half to one cup of dry kitten food or six to nine
+											ounces of wet kitten food per day. If your kitten has difficulties eating hard food, a small amount of
+											water
+											can be added to soften the food. Cat food that is optimized for kittens provides the additional
+											nutrients
+											that are needed for growth, energy, and wellness. Depending on the breed, your cat may have different
+											dietary requirements. You should always consult with your veterinarian for recommendations.
+										</div>
+									</div>
+									<div class="row mb-2">
+										<div class="col">
+											<h6>One Year to Seven Years</h6>
+											This age is when kittens reach the cat stage and do not need as many nutrients. At this age, their level
+											of
+											activity decreases, and so does their metabolism. It is <strong>not</strong> recommended to leave food out for the cats
+											all
+											day. Instead, provide food a couple times a day so they eat meals rather than snacking throughout the
+											day.
+											This practice reduces the risk of obesity and other weight-related feline ailments.
+										</div>
+									</div>
+									<div class="row mb-2">
+										<div class="col">
+											<h6>Seven Years and More</h6>
+											Much like many living organisms, the body begins to deteriorate and experience a lot of changes. Cats at
+											this age should eat less fats and calories and more quality proteins. This means when you are purchasing
+											packaged foods for your cat, look for food that states a particular protein (such as "salmon") and <strong> not </strong>
+											just
+											a category (such as fish). This usually means they are byproducts, or combinations, of lesser quality
+											proteins.
+										</div>
+									</div>
+								</div>
+							</div>
+							</p>
 					</div>
 				</div>
 			</div>
