--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
 									diet can differ between breeds. However, some diets and practices are generally recommended for the
 									well-being of your fluffy family member regardless of breed.
 									</div>
-									<div class="col-4">
+									<div class="col-12 col-md-4">
 										<div class="row">
-											<div class="col-12">
+											<div class="col-6 col-md-12">
 												<img src="assets/img/cats_daria_shatova.jpg" alt="A picture of a cat laying upside down"
 													class="img-fluid" />
 											</div>
@@ -286,11 +286,104 @@
 			</div>
 		</template>
 		<template id="dogs-template">
-			<div class="container-fluid">
+			<div class="primary-container container-fluid">
 				<div id="primary-card" class="card mt-4">
 					<div class="card-body">
-						<h2>Dogs Page Test</h2>
-						<p>content</p>
+						<h2>Dogs</h2>
+						<p>
+							<div class="row">
+								<div class="col-12 col-md-8">
+									<h5>
+										Introduction
+										</h5>
+										The domestic dog is an extremely social animal and offers a diverse variety of choices as there are well over 300 breeds
+										recognized by the World Canine Organization. Adopting a dog offers mutual benefits between dog and owner. Many studies
+										cite the social benefits of having a companion as well as the reduced feelings of loneliness from adopting a dog.
+										Studies even show medical indicators such as <a
+											href="https://www.ahajournals.org/doi/10.1161/CIRCOUTCOMES.119.005554">reduced blood pressure and improved lipid
+											profiles.</a> If you have a dog, it
+										is important to make sure that you care for your dog; be mindful of what you feed your dog and provide enough
+										opportunities for exercise. In this page, you will find more information about how to care for your pets throughout the
+										various stages of their lives.
+								</div>
+								<div class="col-12 col-md-4">
+									<div class="row">
+										<div class="col-6 col-md-12">
+											<img class="img-fluid" src="assets/img/dog_arthur.png" alt="A picture of a sheltie sitting and looking at the camera">
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-12 text-muted">
+											Photo By <a href="alexhoward.dev">Alex Howard</a>, of Arthur, the lovely Sheltie
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col">
+									<h5>Diet & Exercise</h5>
+									<div class="row mb-2">
+										<div class="col">
+											Throughout dogs’ lifespans, they should generally be fed fewer meals as they mature. Puppies should be nursed
+											the
+											first two months, then introduced to three meals per day when they are about three to six months years old.
+											Their
+											food intake should be reduced to two meals per day when they are six months to one year old and finally reduced
+											to
+											one meal after they reach one year old. And a dog’s typical body mass is composed of somewhere between 60 and 70
+											percent water. The <a href="https://www.aspca.org/pet-care/dog-care/dog-nutrition-tips">ASPCA</a> says just a 10
+											percent decrease in body water can cause illness, and a 15 percent loss can
+											cause death, so make sure you keep your pooch hydrated!
+										</div>
+									</div>
+									<div class="row mb-4">
+										<div class="col">
+											Much like humans, dogs need to have a healthy level of activity to keep their organs healthy, as well as sun and
+											fresh air. The minimum recommended time for exercise varies greatly with breed and size differences, but
+											generally a
+											range of 30–120 minutes of exercise is recommended per day! Can you imagine exercising two hours per day? OK, I
+											know
+											that wouldn't bother some of you reading this. But the thought of it to me makes me cringe! And by the way,
+											exercising your dog does not mean you are being challenged to a push-up contest. Brisk walks are OK too! You can
+											also choose from a variety of toys to encourage physical activity; just be sure they are age appropriate and do
+											not
+											pose a choking hazard. Pay careful attention to toys that require supervision.
+										</div>
+									</div>
+									<div class="row mb-4">
+										<div class="col">
+											<h5>Grooming & Handling</h5>
+											Keeping your furry family member clean is important to its health. So be sure to brush frequently to reduce the
+											amount
+											of shedding and prevent matted and tangled fur that can prove to be extremely difficult to remove. Check for
+											insects
+											such as ticks and fleas, especially after visiting heavily wooded areas. Bathing is not only important to your
+											dog’s
+											health but can be an exercise depending on how strong willed the dog is. Rinse all of the soap out, as any
+											residual soap
+											can result in a rash. Be sure the soap is formulated for your puppy or dog, since harsh soaps can cause allergic
+											reactions. And as always, be careful how you handle your loved one. No matter the size of your dog, you need to
+											be
+											cautious as you carry your canine. If you have a small dog, then cradle the pup with one hand under the chest
+											and the forearm supporting the back half. If it is a large dog, reach under the belly with both your arms perpendicular
+											to the dog, and use each arm to support the chest and rear as you lift.
+										</div>
+									</div>
+									<div class="row">
+										<div class="col">
+											<h5>Vaccinations & Medications</h5>
+											You should <strong>always</strong> consult with your veterinarian, but there is a core set of vaccines that are
+											typically
+											recommended. Vaccines that reduce the exposure risk to things such as hepatitis, rabies, and parvovirus. Others
+											may
+											be determined by your vet depending on the environment in which the dog resides. Some of these include <a
+												href="https://www.aspca.org/pet-care/general-pet-care/vaccinations-your-pet">Bordetella
+												bronchiseptica, Borrelia burgdorferi, and Leptospira bacteria.</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</p>
 					</div>
 				</div>
 			</div>
