finishing small pets, standardizing margin

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<div class="card-body">
 						<h2>Home</h2>
 						<p>
-							<div class="row mb-2">
+							<div class="row mb-4">
 								<div class="col-12 col-md-8">
 									<h5>Introduction</h5>
 									Pets are nature's gift to humanity. It has been scientifically proven that opening our homes and hearts to a pet
@@ -107,8 +107,8 @@
 									</div>
 								</div>
 							</div>
-							<div class="row mb-2">
-								<div class="col">
+							<div class="row">
+								<div class="col mb-2">
 									<h5>Adoption Resources</h5>
 									Looking for basic pet care advice for the most common type of pets? Need additional help determining which type of
 									pet is right for you and your family? We will work with you and provide tailored evidence-based pet care to ensure
@@ -140,7 +140,7 @@
 									Snake Rescue: <a href="https://savethesnakes.org/snakerescuecall/">https://savethesnakes.org/snakerescuecall/</a>
 								</div>
 							</div>
-							<div class="row mb-2">
+							<div class="row mb-4">
 								<div class="col">
 									Bird Rescue: <a href="https://ftlob.rescuegroups.org/">https://ftlob.rescuegroups.org/</a>
 								</div>
@@ -155,7 +155,7 @@
 									will
 									contact you within 48 hours to schedule a consultation. All fields are required.
 									<form id="contact-form">
-										<div class="row mb-2">
+										<div class="row mb-2 mt-2">
 											<div class="col">
 												<label for="first-name" class="form-label">First Name</label>
 												<input type="text" placeholder="John" id="first-name" class="form-control" />
@@ -194,7 +194,7 @@
 					<div class="card-body">
 						<h2>Cats</h2>
 						<p>
-							<div class="row mb-2">
+							<div class="row mb-4">
 								<div class="col-8">
 									<h5>Introduction</h5>
 									Cats were first domesticated around 7500 BCE in the western Asia region and are currently the second most
@@ -219,7 +219,7 @@
 										</div>
 								</div>
 							</div>
-							<div class="row">
+							<div class="row mb-4">
 								<div class="col">
 									<div class="row mb-2">
 										<div class="col">
@@ -291,7 +291,7 @@
 					<div class="card-body">
 						<h2>Dogs</h2>
 						<p>
-							<div class="row">
+							<div class="row mb-4">
 								<div class="col-12 col-md-8">
 									<h5>
 										Introduction
@@ -319,7 +319,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="row">
+							<div class="row mb-4">
 								<div class="col">
 									<h5>Diet & Exercise</h5>
 									<div class="row mb-2">
@@ -389,11 +389,83 @@
 			</div>
 		</template>
 		<template id="small-pets-template">
-			<div class="container-fluid">
+			<div class="primary-container container-fluid">
 				<div id="primary-card" class="card mt-4">
 					<div class="card-body">
-						<h2>Small Pets Page Test</h2>
-						<p>content</p>
+						<h2>Small Pets</h2>
+						<p>
+							<div class="row mb-4">
+								<div class="col-12 col-md-8">
+									<h5>Introduction</h5>
+									Sometimes we want a pet in our life but think it’s impossible because we are not home enough to take care of it,
+									or we don’t have enough room. Consider adopting a small animal such as a hermit crab, mouse, gerbil, hamster,
+									guinea pig, or even a chinchilla! Depending on which type of animal you adopt, you can provide a comfortable
+									environment using anything from small to large cages or glass aquariums. You will also need to provide amenities
+									for your new pet, such as bedding or substrate, toys, an exercise wheel, a water dish or drip bottle, a food
+									dish, and grooming equipment. You also need to consider if your new pet will need a friend or if it will be
+									happy living alone. Our “Pexperts” are here to help you decide which pet is right for you and how to provide
+									them with a happy home. Schedule a consultation with us today!
+								</div>
+								<div class="col-12 col-md-4">
+									<div class="row">
+										<div class="col-6 col-md-12">
+											<img class="img-fluid" src="assets/img/small_pets_ricky_kh.jpg" alt="A picture of a hamster cleaning his paws">
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-12 text-muted">
+											Photo by <a
+												href="https://unsplash.com/@sweetmangostudios?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Ricky
+												Kharawala</a> on <a
+												href="https://unsplash.com/photos/adK3Vu70DEQ?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col">
+									<h5>Resources</h5>
+									<div class="row">
+										<div class="col">
+									Here are some resources to get you started:
+										</div>
+									</div>
+									<div class="row">
+										<div class="col">
+											Guinea Pig Care: <a href="https://www.animalhumanesociety.org/adoption/guinea-pig-care">https://www.animalhumanesociety.org/adoption/guinea-pig-care</a>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col">
+											Mouse Care: <a href="https://www.bluecross.org.uk/pet-advice/caring-your-mouse">https://www.bluecross.org.uk/pet-advice/caring-your-mouse</a>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col">
+											Hermit Crab Care: <a href="https://pethermitcrabs.org/cage-habitat/">https://pethermitcrabs.org/cage-habitat/</a>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col">
+											Chinchilla Care: <a href="https://chinchillacare.org/cage-habitat/">https://chinchillacare.org/cage-habitat/</a>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col">
+											Gerbil Care: <a href="https://petgerbils.org/cage-habitat/">https://petgerbils.org/cage-habitat/</a>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col">
+											Hamster Care:
+											<a
+												href="https://www.pdsa.org.uk/taking-care-of-your-pet/looking-after-your-pet/small-pets/the-ideal-home-for-your-hamster">https://www.pdsa.org.uk/taking-care-of-your-pet/looking-after-your-pet/small-pets/the-ideal-home-for-your-hamster</a>
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</p>
 					</div>
 				</div>
 			</div>
