fixing inconsistent styling

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			</nav>
 		</div>
 		<div id="content">
-
+			
 		</div>
 		<template id="home-template">
 			<div class="container primary-container">
@@ -188,7 +188,7 @@
 			</div>
 		</template>
 		<template id="cats-template">
-			<div class="primary-container container-fluid">
+			<div class="primary-container container">
 				<div id="primary-card" class="card mt-4">
 					<div class="card-body">
 						<h2>Cats</h2>
@@ -285,7 +285,7 @@
 			</div>
 		</template>
 		<template id="dogs-template">
-			<div class="primary-container container-fluid">
+			<div class="primary-container container">
 				<div id="primary-card" class="card mt-4">
 					<div class="card-body">
 						<h2>Dogs</h2>
@@ -388,7 +388,7 @@
 			</div>
 		</template>
 		<template id="small-pets-template">
-			<div class="primary-container container-fluid">
+			<div class="primary-container container">
 				<div id="primary-card" class="card mt-4">
 					<div class="card-body">
 						<h2>Small Pets</h2>
